0.5.2/_sources/gallery/nD_multiscale_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/nD_multiscale_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_nD_multiscale_image.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_nD_multiscale_image.py:


nD multiscale image
===================

Displays an nD multiscale image

.. tags:: visualization-advanced

.. GENERATED FROM PYTHON SOURCE LINES 9-29



.. image-sg:: /gallery/images/sphx_glr_nD_multiscale_image_001.png
   :alt: nD multiscale image
   :srcset: /gallery/images/sphx_glr_nD_multiscale_image_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    base shape (8, 1536, 1536)
    multiscale level shapes:  [(8, 1536, 1536), (4, 768, 1536), (2, 384, 1536)]






|

.. code-block:: Python


    import numpy as np
    from skimage.transform import pyramid_gaussian

    import napari

    # create multiscale from random data
    base = np.random.random((1536, 1536))
    base = np.array([base * (8 - i) / 8 for i in range(8)])
    print('base shape', base.shape)
    multiscale = list(
        pyramid_gaussian(base, downscale=2, max_layer=2, channel_axis=-1)
    )
    print('multiscale level shapes: ', [p.shape for p in multiscale])

    # add image multiscale
    viewer = napari.view_image(multiscale, contrast_limits=[0, 1], multiscale=True)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_nD_multiscale_image.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: nD_multiscale_image.ipynb <nD_multiscale_image.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: nD_multiscale_image.py <nD_multiscale_image.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: nD_multiscale_image.zip <nD_multiscale_image.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
